--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -130,7 +130,7 @@ ol {
 
 .set-bg {
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   background-position: top center;
 }
 
