--- a/css/style.css
+++ b/css/style.css
@@ -29,11 +29,12 @@
 /*----------------------------------------*/
 /* Template default CSS
 /*----------------------------------------*/
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 html,
 body {
 	height: 100%;
-	font-family: "Nunito Sans", sans-serif;
+	/* font-family: "Nunito Sans", sans-serif; */
+	font-family: "Inter", sans-serif;
 	-webkit-font-smoothing: antialiased;
 }
 
@@ -46,7 +47,8 @@ h6 {
 	margin: 0;
 	color: #111111;
 	font-weight: 400;
-	font-family: "Nunito Sans", sans-serif;
+	/* font-family: "Nunito Sans", sans-serif; */
+	font-family: "Inter", sans-serif;
 }
 
 h1 {
@@ -75,7 +77,8 @@ h6 {
 
 p {
 	font-size: 15px;
-	font-family: "Nunito Sans", sans-serif;
+	/* font-family: "Nunito Sans", sans-serif; */
+	font-family: "Inter", sans-serif;
 	color: #3d3d3d;
 	font-weight: 400;
 	line-height: 25px;
@@ -413,13 +416,13 @@ ol {
 
 .header__menu {
 	text-align: center;
-	padding: 26px 0 25px;
+	/* padding: 26px 0 25px; */
 }
 
 .header__menu ul li {
 	list-style: none;
 	display: inline-block;
-	margin-right: 45px;
+	/* margin-right: 45px; */
 	position: relative;
 }
 
@@ -492,7 +495,7 @@ ol {
 	left: 0;
 	bottom: 0;
 	width: 100%;
-	height: 2px;
+	height: 4px;
 	background: #e53637;
 	content: "";
 	-webkit-transition: all, 0.5s;
@@ -3938,4 +3941,57 @@ input[type=text] {
 }
 .clothes-type h5{
 	margin-top: 15px;
+}
+
+.introduce p{
+	font-size: 20px;
+	font-weight: 400;
+}
+.header__nav__option span{
+	font-size: 14px;
+}
+.header__nav__option i{
+	cursor: pointer;
+}
+.header__menu ul li a{
+	font-size: 14px;
+	padding: 40px 10px;
+}
+.header__logo{
+	height: fit-content;
+}
+.header__logo a{
+	height: fit-content;
+}
+.news-list a{
+	overflow: hidden;
+	display: block;
+	cursor: pointer;
+	width: 100%;
+	height: 100%;
+}
+.news-list img{
+	object-fit: contain;
+	width: 100%;
+	height: 100%;
+	transition: 0.6s;
+}
+.news-list img:hover{
+	transform: scale(1.1);
+}
+.text-grey{
+	color: rgb(175, 174, 174);
+}
+.text-black{
+	color: black;
+}
+.sub-container {
+	padding: 0px 150px;
+}
+.prd-filter ul{
+	list-style: none;
+}
+.prd-filter ul li h5{
+	display: flex;
+	justify-content: space-between;
 }
