--- a/css/style.css
+++ b/css/style.css
@@ -3440,6 +3440,22 @@ ol {
   .container {
     max-width: 1170px;
   }
+  .filter-lg{
+    display: flex!important;
+  }
+  .filter-sm{
+    display: none!important;
+  }
+  .sort-sm{
+    display: flex;
+    align-items: center;
+    justify-content: end;
+  }
+  .clothes-type {
+    width: 20%;
+    padding: 20px 40px;
+    overflow: hidden;
+  }
 }
 
 /* Medium Device = 1200px */
@@ -3460,11 +3476,30 @@ ol {
   .testimonial__text {
     padding: 130px 45px 175px;
   }
+  .filter-lg{
+    display: block!important;
+  }
+  .filter-sm{
+    display: none!important;
+  }
+  .sort-sm{
+    display: flex;
+    align-items: center;
+    justify-content: end;
+  }
+  .clothes-type {
+    width: 20%;
+    padding: 20px 40px;
+    overflow: hidden;
+  }
 }
 
 /* Tablet Device = 768px */
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
+  .container{
+    min-width: 850px;
+  }
   .header__menu ul li {
     margin-right: 10px;
   }
@@ -3530,6 +3565,25 @@ ol {
   }
   .hero__items{
     height: 365px;
+  }
+  .sort-sm{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+  }
+  .filter-lg{
+    display: none!important;
+  }
+  .filter-sm{
+    display: flex!important;
+    align-items: center;
+    justify-content: end;
+  }
+  .clothes-type {
+    width: 33%;
+    display: block!important;
+    padding: 20px 40px;
+    overflow: hidden;
   }
 }
 
@@ -3986,11 +4040,7 @@ input[type="text"] {
 .product__filter .product__item .product__item__text h6:nth-child(3) {
   font-weight: 800;
 }
-.clothes-type {
-  width: 20%;
-  padding: 20px 40px;
-  overflow: hidden;
-}
+
 .clothes-type img {
   transition: 0.6s;
 }
