--- a/css/style.css
+++ b/css/style.css
@@ -1332,14 +1332,20 @@ ol {
   padding-top: 15px;
 }
 
+.shop__sidebar__color .outside-color {
+  display: inline-block;
+  margin-right: 10px;
+  padding: 10px;
+  background-color: white;
+}
 .shop__sidebar__color label {
   height: 30px;
   width: 30px;
   border-radius: 50%;
   position: relative;
-  margin-right: 10px;
+  margin: 0px;
   display: inline-block;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   cursor: pointer;
 }
 
@@ -3481,6 +3487,11 @@ ol {
     align-items: center;
     justify-content: end;
   }
+  .sort-sm-start{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+  }
   .clothes-type {
     width: 20%;
     padding: 20px 40px;
@@ -3516,6 +3527,11 @@ ol {
     display: flex;
     align-items: center;
     justify-content: end;
+  }
+  .sort-sm-start{
+    display: flex;
+    align-items: center;
+    justify-content: start;
   }
   .clothes-type {
     width: 20%;
@@ -3602,7 +3618,7 @@ ol {
     text-align: left !important;
   }
   .header__logo a{
-    height: 100px !important;
+    height: 75px !important;
   }
   .header__logo a i{
     height: 75% !important;
@@ -3628,6 +3644,28 @@ ol {
   }
   .fa-heart{
     font-size: 30px;
+  }
+  .shop__sidebar__accordion #accordionExample a{
+    font-size: 20px;
+    padding: 10px 0px;
+  }
+  .shop__sidebar__color label{
+    padding: 10px;
+    border: 1px solid gainsboro;
+    background-color: white;
+  }
+  .header-responsive{
+    align-items: center;
+    justify-content: end;
+  }
+  .header-responsive .col-3 span{
+    font-size: 18px !important;
+  }
+  .header-responsive .col-3 span a{
+    font-size: 18px !important;
+  }
+  .header-responsive i{
+    font-size: 20px;
   }
   .favourite-prd p, 
   .favourite-prd h4{
@@ -3678,6 +3716,10 @@ ol {
     height: 100%;
     width: 100%;
     object-fit: cover;
+  }
+  #header-responsive .header__menu ul li a{
+    padding: 10px;
+    font-size: 20px;
   }
   .total-product-price span strong{
     color: #000;
@@ -3748,13 +3790,13 @@ ol {
   .canvas__open {
     display: block;
     font-size: 22px;
-    color: #111111;
+    color: red;
     height: 35px;
     width: 35px;
     line-height: 35px;
     text-align: center;
-    border: 1px solid #111111;
-    border-radius: 2px;
+    /* border: 1px solid red;
+    border-radius: 2px; */
     cursor: pointer;
     position: absolute;
     right: 15px;
@@ -3936,9 +3978,9 @@ ol {
   .header .container {
     position: relative;
   }
-  .header__menu {
+  /* .header__menu {
     display: none;
-  }
+  } */
   .header__nav__option {
     display: none;
   }
@@ -4219,7 +4261,7 @@ input#search {
 }
 .header__menu ul li a {
   font-size: 13px;
-  padding: 40px 10px;
+  padding: 41px 10px;
   text-transform: uppercase;
 }
 .header__logo {
@@ -4765,4 +4807,48 @@ ul#myTab3 li a{
 }
 li:has(a.direction.active){
   display: none;
+}
+.shop__sidebar{
+  position: absolute;
+  z-index: 999;
+  top: 0;
+  background: whitesmoke;
+  bottom: 0;
+}
+.index-more{
+  z-index: 999;
+}
+.item-menu-responsive-extends{
+  text-align: center;
+  padding: 20px 10px;
+  border: 1px solid #e4e4e4;
+}
+ul#myTab.menu-responsive-item li{
+  background-color: #ededed;
+  border-left: 1px solid #cecece;
+  border-right: 1px solid #cecece;
+}
+ul#myTab.menu-responsive-item li:has(a.active){
+  background-color: white;
+}
+ul#myTab.menu-responsive-item li a.active{
+  border: none;
+}
+ul#myTab.menu-responsive-item li a.active span{
+  padding-bottom: 10px;
+  border-bottom: 3px solid #af0003;
+}
+ul#myTab.menu-responsive-item li a{
+  text-align: center;
+  padding: 20px 10px;
+  color: black;
+}
+#myTabContent ul.nav-sub-list li.nav-sub-item{
+  border-bottom: 1px solid #cecece;
+  padding: 20px 30px;
+}
+#myTabContent ul.nav-sub-list li.nav-sub-item a{
+  color: black;
+  font-size: 20px;
+  display: block;
 }
