--- a/css/style.css
+++ b/css/style.css
@@ -3712,6 +3712,11 @@ ol {
     padding-top: 20px;
     padding-bottom: 20px;
   }
+  .big-size-responsive{
+    font-size: 25px;
+    text-align: left !important;
+    padding: 10px 20px !important;
+  }
   #carouselExampleIndicators{
     height: 800px;
   }
@@ -4379,7 +4384,7 @@ input#search {
   }
   .google{
     border: 1px solid #bbb9b9;
-    border-radius: 50px;
+    border-radius: 8px;
     padding: 0px 20px;
     cursor: pointer;
     opacity: 0.8;
@@ -4388,7 +4393,7 @@ input#search {
     opacity: 1;
   }
   .btn-round{
-    border-radius: 50px;
+    border-radius: 8px;
   }
   .btn-black{
     background-color: #000000;
@@ -4673,7 +4678,7 @@ input#search {
   background-color: #EAF2E5;
   color: #7FB15E;
   position: fixed;
-  top: 0;
+  top: 100px;
   right: 0;
   margin: 10px 10px 0px;
   span {
